HHH-14371 Open java.base/java.lang to the unnamed module in Proxool tests
Signed-off-by: Yoann Rodière <yoann@hibernate.org>